fixed on the overlapping card on text in valueAdd page

--- a/frontend/styles/Resources.module.css
+++ b/frontend/styles/Resources.module.css
@@ -595,5 +595,9 @@
   }
 }
 
-@media only screen and (max-width: 375px) {
+@media only screen and (max-width: 374px) {
+  .card_header {
+    overflow: scroll;
+    cursor: move;
+  }
 }
